some responsive fixes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="container-fluid">
       <div class="row box blue-box">
-        <div class="col-md-8"></div>
+        <div class="col-md-8 col-sm-12"></div>
         <ul class="top-icons">
           <li id="mini-icon"></li>
           <li class="top-spacer"></li>
@@ -31,7 +31,7 @@
           <li class="top-spacer"></li>
           <a href="#"><li id="settings-icon"></li></a>
         </ul>
-        <div class="col-md-4"></div>
+        <div class="col-md-4 col-sm-0"></div>
       </div>
 
       <div class="row box green-box">
@@ -46,14 +46,6 @@
             <a href="#" id="chart-link"><li id="chart-icon"></li><div class="triangle" id="chart-tri"></div></a>
           </ul>
           <div id="icon-shadows"></div>
-          <!-- <ul class="triangle-set">
-            <li class="triangle" id="dash-tri"></li>
-            <li class="triangle" id="ppl-tri"></li>
-            <li class="triangle" id="chat-tri"></li>
-            <li class="triangle" id="tag-tri"></li>
-            <li class="triangle" id="paper-tri"></li>
-            <li class="triangle" id="chrt-tri"></li>
-          </ul> -->
         </div>
       </div>
       <div class="container">
@@ -85,7 +77,7 @@
         </div>
 
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-12">
             <div class="row purple-box">
               <div class="container-fluid">
               <div class="row tasks-title">
@@ -166,14 +158,14 @@
             </div>
           </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-12">
             <div class="row maroon-box">
               <div class="container-fluid">
               <div class="row analytics-head">
                 <h1 class="content-title">Analytics</h1>
               </div>
               <div class="row a-charts">
-                <div class="col-md-9">
+                <div class="col-md-9 col-sm-12">
                   <div class="row drop">
                     <h6>ACTIVITY</h6>
                     <select name="date" id="date-dpd">
@@ -187,7 +179,7 @@
                     <img src="./images/analytics-graph.png" alt="Bar Graph">
                   </div>
                 </div>
-                <div class="col-md-3 pie">
+                <div class="col-md-3 col-sm-12 pie">
                   <div class="container">
                     
                   <h6>CHANNELS</h6>
