--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="#" id="paper-link"><li id="paper-icon"></li><div class="triangle" id="paper-tri"></div></a>
             <a href="#" id="chart-link"><li id="chart-icon"></li><div class="triangle" id="chart-tri"></div></a>
           </ul>
-          <div id="icon-shadows"></div>
+          <div id="shadow-box"><div id="icon-shadows"></div></div>
         </div>
       </div>
       <div class="container">
@@ -64,8 +64,8 @@
         <div class="row">
           <div class="col-md-12 box tan-box">
             <div class="row announcements">
-              <div class="col-md-2 title"><h6>ANNOUNCEMENTS</h6></div>
-              <div class="col-md-9 body"><p>Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus</p></div>
+              <div class="col-md-2 col-sm-6 title"><h6>ANNOUNCEMENTS</h6></div>
+              <div class="col-md-9 col-sm-6 body"><p>Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus</p></div>
               <div class="col-md-1 announce-nav">
                 <ul id="announce-arrows">
                   <a href="#"><li id="announce-left-arrow"></li></a>
@@ -181,11 +181,11 @@
                 </div>
                 <div class="col-md-3 col-sm-12 pie">
                   <div class="container">
-                    
+                  <div class="pie1">  
                   <h6>CHANNELS</h6>
-                  <img src="./images/analytics-channels.png" alt="Channels Pie Graph">
-                  <h6>REFERRALS</h6>
-                  <img src="./images/analytics-referrals.png" alt="Referrals Pie Graph">
+                  <img src="./images/analytics-channels.png" alt="Channels Pie Graph"></div>
+                  <div class="pie2"><h6>REFERRALS</h6>
+                  <img src="./images/analytics-referrals.png" alt="Referrals Pie Graph"></div>
                   </div>
                 </div>
               </div>
@@ -275,15 +275,15 @@
       </div>
         
       <div class="row box footer fixed-bottom darkblue-box">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
           <ul id="footer-support">
             <a href="#"><li>Tutorials</li></a>
             <a href="#"><li>Support</li></a>
             <a href="#"><li id="last-support">Blog</li></a>
           </ul>
         </div>
-        <div class="col-md-4 footer-middle"><p><a href="#">Ariel Winter</a> likes your <a href="#">Win A Cooper Sweepstakes</a> Promotion</p></div>
-        <div class="col-md-4 social">
+        <div class="col-md-4 col-sm-12 footer-middle"><p><a href="#">Ariel Winter</a> likes your <a href="#">Win A Cooper Sweepstakes</a> Promotion</p></div>
+        <div class="col-md-4 col-sm-12 social">
           <ul id="social-links">
             <div id="carrot-cont"><a href="#"><li id="footer-carrot"></li></a></div>
             <a href="#"><li id="profile"></li></a>
